@@ -24,7 +24,7 @@
                                                     </div>
                                                 </ngx-dropzone-label>
                                             </ngx-dropzone>
-                                            <div class="upload-profile-images" [sortablejs]="allProfileItems" [sortablejsOptions]="{ animation: 150, delay: 150, onChoose: onChoose, onUnchoose: onUnchoose, onSort: onSort }" (contextmenu)="$event.preventDefault(); $event.stopPropagation();">
+                                            <div class="upload-profile-images" [sortablejs]="allProfileItems" [sortablejsOptions]="{ animation: 150, delay: 50, onChoose: onChoose, onUnchoose: onUnchoose, onSort: onSort }" (contextmenu)="$event.preventDefault(); $event.stopPropagation();">
                                                 <div class="upload-drag-item m-1" *ngFor="let image of allProfileItems" (click)="selectProfileImage(image?.name)" (contextmenu)="$event.preventDefault(); $event.stopPropagation();">
                                                     <ng-container [ngSwitch]="image?.type">
                                                         <div *ngSwitchCase="'url'">
