@@ -24,8 +24,7 @@
     object-fit: contain;
     position: relative;
     transition: all ease .2s;
-    box-shadow: 0 0 3px #888;
-    background-color: #fff;
+    background-color: #f7f7f7;
     &:hover{
         opacity: .7;
     }
