@@ -1,11 +1,85 @@
 @import './variables.scss';
-@import "~swiper/swiper-bundle";
-
 @font-face {
     font-family: 'Bauhaus93';
     src: url('../fonts/Bauhaus 93 Regular.ttf');
 }
 
+@import "~swiper/swiper";
+@import "~swiper/components/pagination/pagination";
+@import "~swiper/components/navigation/navigation";
+.swiper-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-button-prev {
+  border-radius: 0 3px 3px 0;
+  left: 0;
+}
+.swiper-button-next {
+  border-radius: 3px 0 0 3px;
+  right: 0;
+}
+.swiper-button-prev,
+.swiper-button-next {
+  opacity: 0;
+  background-color: rgba(204, 204, 204, .5);
+  height: 100px;
+  top: 40%;
+  transition: background-color ease .2s;
+
+  &.swiper-button-disabled{
+    display: none;
+  }
+
+  &:hover{
+    background-color: rgba(0, 0, 0, .2);
+  }
+
+  &::before,
+  &::after {
+    font-size: 1rem;
+    color: #fff;
+  }
+}
+.swiper-pagination-bullet-active {
+  background-color: #b71c1c;
+}
+swiper {
+  transition: opacity ease .2s;
+  &:hover{
+    .swiper-button-prev,
+    .swiper-button-next {
+      opacity: 1;
+    }
+  }
+}
 
 .ws-bg-secondary{
     background-color: map-get($ws-color, secondary);
