@@ -4,6 +4,11 @@
 
 - v1.0.1100                                 -
 ---------------------------------------------
+- 2021-09-25                                -
+---------------------------------------------
+.: WSM: Task - Make the image clear to display (WSM-426)
+
+---------------------------------------------
 - 2021-09-19                                -
 ---------------------------------------------
 .: WSM: Task - Advertisement Module (WSM-423)
